# OpenGLTutorial

./: .gitignore  CMakeLists.txt  OpenGL.sln
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters  imgui.ini
OpenGL/res/shaders/: Basic.shader  Effect1Fushe.shader  OG6Coordinate.shader  OG6Coordinate2.shader
OpenGL/src/: Application.cpp  Application_1st.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
OpenGL/src/effectTasks/: Effect1Fushe.cpp  Effect1Fushe.h  OG10Light.cpp  OG10Light.h  OG6Coordinate.cpp  OG6Coordinate.h  OG6Coordinate2.cpp  OG6Coordinate2.h  OG7Camera.cpp  OG7Camera.h  OG7Camera2.cpp  OG7Camera2.h  OG8Lighting.cpp  OG8Lighting.h  Task.cpp  Task.h  TestBatchRender.cpp  TestBatchRender.h  TestClearColor.cpp  TestTexture2D.cpp  TestTexture2D.h
OpenGL/src/export/: Window.cpp  Window.h
OpenGL/src/glElement/: IndexBuffer.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  glCheck.h
OpenGL/src/tasks/: Task.cpp  Task.h  TestBatchRender.cpp  TestBatchRender.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.h
OpenGL/src/tests/: Test.cpp  Test.h  TestBatchRender.h  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
